--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="container-cards">
                 <div class="cards"data-anime>
                     <h4>CakeStore</h4>
-                    <i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i>
+                    <a href="https://github.com/RobertoDSouza/CakeStore" target="_blank"><i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i></a>
                     <p>Ladding page para portifólio de pequenas e medias
                         docerias e lojas de cafe.<br>
                         <i class="fa-brands fa-css3-alt" style="color: rgb(255, 0, 255);"></i>
@@ -175,7 +175,7 @@
                 
                 <div class="cards" data-anime>
                     <h4>Netflix Clone</h4>
-                    <i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i>
+                    <a href="https://github.com/RobertoDSouza/NetflixClone"target="_blank"><i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i></a>
                     <p>Pagina de estudo de 2020 , do desafio da Digital Innovation One
                         , onde desenvolvemos um clone da Home do Netflix.<br>
                         <i class="fa-brands fa-css3-alt" style="color: rgb(255, 0, 255);"></i>
@@ -186,7 +186,7 @@
 
                 <div class="cards"data-anime>
                     <h4>Calculator JS</h4>
-                    <i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i>
+                    <a href="https://github.com/RobertoDSouza/Calculator-JS"target="_blank"><i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i></a>
                     <p>Projeto de estudo de 2020 onde desenvolvi uma calculadora em JavaScript.<br>
                         <i class="fa-brands fa-css3-alt" style="color: rgb(255, 0, 255);"></i>
                         <i class="fa-brands fa-html5" style="color: rgb(0, 255, 255);"></i>
@@ -196,7 +196,7 @@
 
                 <div class="cards"data-anime>
                     <h4>Crono JS</h4>
-                    <i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i>
+                    <a href="https://github.com/RobertoDSouza/CronoJS"target="_blank"><i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i></a>
                     <p>Projeto de 2020 de estudo onde desenvolvi um cronometro em JavaScript
                         com pausa e reset.<br>
                         <i class="fa-brands fa-css3-alt" style="color: rgb(255, 0, 255);"></i>
@@ -207,7 +207,7 @@
 
                 <div class="cards"data-anime>
                     <h4>Site CUB DIO</h4>
-                    <i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i>
+                    <a href="https://github.com/RobertoDSouza/dio-repositorio-aula"target="_blank"><i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i></a>
                     <p>Ladding feita em 2020 no desafio da Digital Innovation One,
                         simulando uma página de apresentação de uma empresa real.<br>
                         <i class="fa-brands fa-css3-alt" style="color: rgb(255, 0, 255);"></i>
@@ -217,7 +217,7 @@
 
                 <div class="cards"data-anime>
                     <h4>Primeiro Portifólio</h4>
-                    <i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i>
+                    <a href="https://github.com/RobertoDSouza/PortifolioRoberto"target="_blank"><i class="bi bi-box-arrow-up-right" style="font-size: 20px;"></i></a>
                     <p>Feito em 2020 , primeiro portifólio que fiz, usando bootstrap, 
                         CssGrid e bastante JavaScript.<br>
                         <i class="fa-brands fa-css3-alt" style="color: rgb(255, 0, 255);"></i>
