--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero"> 
         <span>Olá ! Eu sou </span>
         <h1> Roberto Souza</h1>
-        <h2>Desenvolvedor Front End.</h2>
+        <h2>Desenvolvedor Front End.<h4 class="typedtext"></h4></h2>
     </section>
     <section class="about" id="about">
         <h2 class="titulosection">.01<br>Sobre mim</h2>
