--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
      </ul>    
     </header>   
     <section class="hero"> 
-        <span>Olá ! Eu sou </span>
+        <span>Olá! Eu sou </span>
         <h1> Roberto Souza</h1>
-        <h2>Desenvolvedor Front End.<h4 class="typedtext"></h4></h2>
+        <h2>Desenvolvedor Front End<h4 class="typedtext"></h4></h2>
     </section>
     <section class="about" id="about">
         <h2 class="titulosection">.01<br>Sobre mim</h2>
